--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -39,7 +39,7 @@ title: Work tray
                  <tbody>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy in a forest.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Alvin"></td>
-                     <td><a href="#">Hanson, Alvin</a></td>
+                     <td class="table-name-label"><a href="#">Hanson Jansen Mohammed III, Alvin-Tucker</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Highfield Academy">Highfield Academy</span></td>
@@ -50,7 +50,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy running.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Ellery"></td>
-                     <td><a href="#">Holden, Ellery</a></td>
+                     <td class="table-name-label"><a href="#">Holden, Ellery</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Oak Junior School">Oak Junior School</span></td>
@@ -67,7 +67,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/girl at school.jpg" class="rounded d-block idx-avatar-card" alt="Photo of  Sienna"></td>
-                     <td><a href="#">Reid, Sienna</a></td>
+                     <td class="table-name-label"><a href="#">Sheringham-Faust, Sienna</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="St Mary's Primary">St Mary's Primary</span></td>
@@ -78,7 +78,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/teenager at college.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Chandler"></td>
-                     <td><a href="/summary">Tate, Chandler</a></td>
+                     <td class="table-name-label"><a href="/summary">Tate, Chandler</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
@@ -87,13 +87,13 @@ title: Work tray
                      <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell">
                        <div class="d-flex align-items-center">
-                         <i class="fa fa-exclamation-triangle fa-lg text-danger me-1" data-bs-toggle="tooltip" data-bs-title="Overdue deadline"></i>
+                         <i class="fa fa-exclamation-triangle fa-lg text-error-600 me-1" data-bs-toggle="tooltip" data-bs-title="Overdue deadline"></i>
                         </div>
                      </td>
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
-                     <td><a href="#">Wagner, Victor</a></td>
+                     <td class="table-name-label"><a href="#">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
