--- a/case-view/assessment-alternate.html
+++ b/case-view/assessment-alternate.html
@@ -38,7 +38,7 @@ title: EHC Hub
         <h4>Requests for advice</h4>
 
         <div class="mb-5 table-responsive">
-           <table class="table table-striped table-hover table-borderless idx-results-table align-middle mt-0">
+           <table class="table table-striped table-hover table-borderless idx-results-table align-middle no-wrap mt-0">
              <thead>
                <tr>
                  <th scope="col">#<i class="fa fa-sort ms-1"></i></th>
@@ -55,8 +55,8 @@ title: EHC Hub
              <tbody>
                <tr>
                  <th scope="row">1</th>
-                 <td>Robyn Sayer</td>
-                 <td>SENCo</td>
+                 <td class="table-name-label">Robyn Sayer</td>
+                 <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="SENCo">SENCo</span></td>
                  <td>Education</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
@@ -75,8 +75,8 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">2</th>
-                 <td>Peter Jameson</td>
-                 <td>Educational Psychologist</td>
+                 <td class="table-name-label">Peter Jameson</td>
+                 <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Educational Psychologist">Educational Psychologist</span></td>
                  <td>Education</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
@@ -95,8 +95,8 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">3</th>
-                 <td>Helen Clarkson</td>
-                 <td>OT</td>
+                 <td class="table-name-label">Helen Clarkson</td>
+                 <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Occupational Therapist">Occupational Therapist</span></td>
                  <td>Health</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
@@ -116,7 +116,7 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row" rowspan="3" class="align-top">4</th>
-                 <td>Social Care</td>
+                 <td class="table-name-label">Social Care</td>
                  <td></td>
                  <td>Social Care</td>
                  <td>27/09/2022</td>
@@ -135,8 +135,8 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
-                 <td>Kerry Holmes</td>
-                 <td>Social Worker</td>
+                 <td class="table-name-label">Kerry Holmes</td>
+                 <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Social Worker">Social Worker</span></td>
                  <td>Social Care</td>
                  <td></td>
                  <td></td>
@@ -154,8 +154,8 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
-                 <td>Henry Fowler</td>
-                 <td>Social Worker</td>
+                 <td class="table-name-label">Henry Fowler</td>
+                 <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Social Worker">Social Worker</span></td>
                  <td>Social Care</td>
                  <td></td>
                  <td></td>
@@ -175,8 +175,8 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">5</th>
-                 <td>Julie Grange</td>
-                 <td>Physio</td>
+                 <td class="table-name-label">Julie Grange</td>
+                 <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Physio">Physio</span></td>
                  <td>Health</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
