--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -39,7 +39,7 @@ title: Work tray
                  <tbody>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy in a forest.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Alvin"></td>
-                     <td class="table-name-label"><a href="#">Hanson Jansen Mohammed III, Alvin-Tucker</a></td>
+                     <td class="table-name-label"><a href="#">Hanson, Alvin-Tucker</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Highfield Academy">Highfield Academy</span></td>
@@ -67,7 +67,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/girl at school.jpg" class="rounded d-block idx-avatar-card" alt="Photo of  Sienna"></td>
-                     <td class="table-name-label"><a href="#">Sheringham-Faust, Sienna</a></td>
+                     <td class="table-name-label"><a href="#">Reid, Sienna</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="St Mary's Primary">St Mary's Primary</span></td>
