--- a/case-view/assessment-alternate.html
+++ b/case-view/assessment-alternate.html
@@ -61,7 +61,7 @@ title: EHC Hub
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td></td>
-                 <td><span class="badge text-bg-warning w-100">Pending</span></td>
+                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -81,7 +81,7 @@ title: EHC Hub
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td>10/11/2022</td>
-                 <td><span class="badge text-bg-danger w-100">Closed</span></td>
+                 <td><span class="badge rounded-pill text-bg-danger w-100">Closed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -101,7 +101,7 @@ title: EHC Hub
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td>06/11/2022</td>
-                 <td><span class="badge text-bg-success w-100">Completed</span></td>
+                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -122,7 +122,7 @@ title: EHC Hub
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td></td>
-                 <td><span class="badge text-bg-warning w-100">Pending</span></td>
+                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -141,7 +141,7 @@ title: EHC Hub
                  <td></td>
                  <td></td>
                  <td></td>
-                 <td><span class="badge text-bg-warning w-100">Pending</span></td>
+                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -160,7 +160,7 @@ title: EHC Hub
                  <td></td>
                  <td></td>
                  <td></td>
-                 <td><span class="badge text-bg-success w-100">Completed</span></td>
+                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -181,7 +181,7 @@ title: EHC Hub
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td>06/11/2022</td>
-                 <td><span class="badge text-bg-success w-100">Completed</span></td>
+                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
