--- a/case-view/assessment-alternate.html
+++ b/case-view/assessment-alternate.html
@@ -43,12 +43,12 @@ title: EHC Hub
                <tr>
                  <th scope="col">#<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col">Name<i class="fa fa-sort ms-1"></i></th>
+                 <th scope="col">Status<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col">Job title<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col">Specialism<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col">Requested<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col">Due<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col">Completed<i class="fa fa-sort ms-1"></i></th>
-                 <th scope="col">Status<i class="fa fa-sort ms-1"></i></th>
                  <th scope="col" class="text-center">Actions</th>
                </tr>
              </thead>
@@ -56,12 +56,12 @@ title: EHC Hub
                <tr>
                  <th scope="row">1</th>
                  <td class="table-name-label">Robyn Sayer</td>
+                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="SENCo">SENCo</span></td>
                  <td>Education</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td></td>
-                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -76,12 +76,12 @@ title: EHC Hub
                <tr>
                  <th scope="row">2</th>
                  <td class="table-name-label">Peter Jameson</td>
+                 <td><span class="badge rounded-pill text-bg-danger w-100">Closed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Educational Psychologist">Educational Psychologist</span></td>
                  <td>Education</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td>10/11/2022</td>
-                 <td><span class="badge rounded-pill text-bg-danger w-100">Closed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -95,20 +95,19 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">3</th>
-                 <td class="table-name-label">Helen Clarkson</td>
+                 <td class="table-name-label"><a href="#">Helen Clarkson</a></td>
+                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Occupational Therapist">Occupational Therapist</span></td>
                  <td>Health</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td>06/11/2022</td>
-                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
-                       <li><a class="dropdown-item" href="#">Read</a></li>
                        <li><a class="dropdown-item" href="#">Re-open</a></li>
                      </ul>
                    </div>
@@ -117,12 +116,12 @@ title: EHC Hub
                <tr>
                  <th scope="row" rowspan="3" class="align-top">4</th>
                  <td class="table-name-label">Social Care</td>
+                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td></td>
                  <td>Social Care</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td></td>
-                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -136,12 +135,12 @@ title: EHC Hub
                </tr>
                <tr>
                  <td class="table-name-label">Kerry Holmes</td>
+                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Social Worker">Social Worker</span></td>
                  <td>Social Care</td>
                  <td></td>
                  <td></td>
                  <td></td>
-                 <td><span class="badge rounded-pill text-bg-warning w-100">Pending</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -154,20 +153,19 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
-                 <td class="table-name-label">Henry Fowler</td>
+                 <td class="table-name-label"><a href="#">Henry Fowler</a></td>
+                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Social Worker">Social Worker</span></td>
                  <td>Social Care</td>
                  <td></td>
                  <td></td>
                  <td></td>
-                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
-                       <li><a class="dropdown-item" href="#">Read</a></li>
                        <li><a class="dropdown-item" href="#">Re-open</a></li>
                      </ul>
                    </div>
@@ -175,20 +173,19 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">5</th>
-                 <td class="table-name-label">Julie Grange</td>
+                 <td class="table-name-label"><a href="#">Julie Grange</a></td>
+                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Physio">Physio</span></td>
                  <td>Health</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
                  <td>06/11/2022</td>
-                 <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-center">
                    <div class="dropdown dropstart">
                      <a class="px-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                        <i class="fal fa-ellipsis-v-alt"></i>
                      </a>
                      <ul class="dropdown-menu">
-                       <li><a class="dropdown-item" href="#">Read</a></li>
                        <li><a class="dropdown-item" href="#">Re-open</a></li>
                      </ul>
                    </div>
