--- a/case-view/timeline-alternate.html
+++ b/case-view/timeline-alternate.html
@@ -38,13 +38,17 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <a href="#" title="Remove case note"><i class="fal fa-trash-alt text-neutral-500 me-2"></i></a>
-              <span class="badge text-bg-success me-2">Note</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <a href="#" title="Remove case note"><i class="fal fa-trash-alt text-neutral-500 me-2"></i></a>
+                <span class="badge rounded-pill text-dark bg-success-300 me-2">Note</span>
+              </div>
             </li>
-            <li class="list-group-item d-flex justify-content-between">
+            <li class="list-group-item">
               Phone call today at 9:50am with SENDIASS to discuss options to support Ellery's family through this process. Agreed action is for SENDIASS representative to meet with Shane Holden on Friday at the school.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -53,12 +57,16 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               Max Schneider was assigned as a Co-ordinator.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -66,9 +74,12 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               <p>Reverted Ellery's case to the Plan Decision stage.</p>
@@ -76,6 +87,7 @@ title: EHC Hub
                 <strong>Reason:</strong> Correct a mistake.<br>
                 <strong>Supporting comment:</strong> Incorrect decision published and family informed.
               </p>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -83,12 +95,16 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               Updated Ellery's details.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -96,12 +112,16 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               Requested information ahead of a review meeting from Educational Psychology Team. A notification email was sent to <a href="mailto:inbox@educational-psychcology.org">inbox@educational-psychcology.org</a>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -109,12 +129,16 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               Invited Helen Glass to a review meeting. A notification email was sent to <a href="mailto:helen.glass@example.com">helen.glass@example.com</a>
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -122,12 +146,16 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               Started a review of Ellery's EHC Plan.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
@@ -135,12 +163,16 @@ title: EHC Hub
         <div class="card mb-5">
           <ul class="list-group list-group-flush">
             <li class="list-group-item timeline-header d-flex justify-content-between">
-              <span class="flex-grow-1">Max Schneider</span>
-              <span class="badge text-bg-primary  me-2">System</span>
-              <span>12 Jul 2023 11:49</span>
+              <div>
+                <p class="mb-0">Max Schneider</p>
+              </div>
+              <div class="d-flex align-items-center">
+                <span class="badge rounded-pill text-dark bg-secondary-300 me-2">System</span>
+              </div>
             </li>
             <li class="list-group-item">
               Imported Ellery's EHC Plan.
+              <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
         </div>
