--- a/case-view/timeline-alternate.html
+++ b/case-view/timeline-alternate.html
@@ -48,6 +48,7 @@ title: EHC Hub
             </li>
             <li class="list-group-item">
               Phone call today at 9:50am with SENDIASS to discuss options to support Ellery's family through this process. Agreed action is for SENDIASS representative to meet with Shane Holden on Friday at the school.
+              <p><a href="#">SENDIAS-agreement-signed.pdf</a></p>
               <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
@@ -176,6 +177,16 @@ title: EHC Hub
             </li>
           </ul>
         </div>
+
+        <nav aria-label="Results navigation">
+           <ul class="pagination justify-content-center my-5">
+             <li class="page-item active"><a class="page-link" href="#">1</a></li>
+             <li class="page-item"><a class="page-link" href="#">2</a></li>
+             <li class="page-item"><a class="page-link" href="#">3</a></li>
+             <li class="page-item"><a class="page-link" href="#"><i class="fal fa-chevron-right"></i></a></li>
+             <li class="page-item"><a class="page-link" href="#"><i class="fal fa-chevron-double-right"></i></a></li>
+           </ul>
+         </nav>
 
       </div>
     </div>
